@@ -189,7 +189,7 @@ public class User implements UserDetails {
 
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return Collections.emptyList();
+    return List.of(() -> this.role.name());
   }
 
   @Override
